3-Devops/3-DigitalOcean/B - DigitalOcean avançado/03-DOKS-Kubernetes-Cluster/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-api
  namespace: study
spec:
  selector:
    app: study-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
