3-Devops/3-DigitalOcean/B - DigitalOcean avançado/03-DOKS-Kubernetes-Cluster/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: study-api
  namespace: study
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: study-k8s.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: study-api
                port:
                  number: 80
